# a-thousand-blank-white-cards

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yml  CLAUDE.md  DOLT_REMOTE.md  Dockerfile  README.md  ldsbspsqhvujciubirkvm3g0o8ecflmv  manifest  pyproject.toml  qvnvlucg7fb4gkv4gcmpgiomr2rhrobb.darc  render.yaml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.beads/hooks/: pre-commit
.github/workflows/: ci.yml
data/: game_rules.txt  mtg_glossary.json  seed_cards.json  seed_cards_fillers.json  seed_cards_gold.json  seed_cards_simple.json
data/eval/: ANNOTATION_GUIDE.md  CANONICAL_SPEC.md  download_images.py  eval_cards.json  eval_cards_hard.json  image_urls.json  (+3 more)
docs/: EVAL_ASSESSMENT.md  RETRIEVER_ANALYSIS.md  SUBMISSION.md  WRITEUP.md  architecture.md  dynamic-card-resolution.md  future-improvements.md  loom-script.md  self-modification-spike.md  state-example.RECONCILIATION.md  state-example.jsonc
frontend/: .env.example  .gitignore  .prettierignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
ops/: __init__.py  verify_langsmith.py
scripts/: __init__.py  analyze_evals.ipynb  build_mtg_glossary.py  build_seed_corpus.py  evals.ipynb  export_capability_wishes.py  migrate_card_schema.py  smoke_test.py
src/: app.py  config.py  logging_config.py  main.py  ws.py
tests/: conftest.py  test_agent_comment_log.py  test_agent_llm.py  test_agent_pipeline.py  test_agent_prompts.py  test_agent_schemas.py  test_agent_skeleton.py  test_agent_state.py  test_agent_vision.py  test_app.py  test_apply_effect.py  test_capability_wish.py  test_card_art.py  test_card_schema.py  test_ceilings.py  test_compile.py  test_conclusions.py  test_config.py  test_connection_manager.py  test_consolation_boon.py  test_corpus_lint.py  test_cors.py  test_deck.py  test_effect_failure_agent.py  test_effects_ops.py  test_end_game_epilogue.py  test_end_game_live.py  test_engine_facade.py  test_epilogue_flow.py  test_epilogue_tally.py  test_eval_analysis.py  test_eval_core.py  test_eval_runner.py  test_evals_paths.py  test_events_bus.py  test_fixtures.py  test_full_game.py  test_game_state.py  test_gold_exemplars.py  test_graph_assemble.py  (+88 more)
(+232 files in other folders)
