[project]
name = "a-thousand-blank-white-cards"
version = "0.1.0"
description = "A digital implementation of the party game 1000 Blank White Cards, where players draw, write, and play their own cards to invent the game as they go."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.12",
    "langchain-openai>=1.3.4",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.8",
    "langsmith>=0.10.0",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.51.0",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-include = [
    "src/agent",
    "src/board",
    "src/engine",
    "src/evals",
    "src/models",
    "src/config.py",
    "src/logging_config.py",
]

[dependency-groups]
dev = [
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
# Notebook-only deps for scripts/evals.ipynb (the eval visualization driver).
# Kept separate from dev so CI/test installs stay lean: `uv sync --group evals`.
evals = [
    "matplotlib>=3.9",
    "ipykernel>=6.29",
    "jupyter>=1.1",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "6.0"
addopts = "--cov=src --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.report]
fail_under = 80
